<resources>
    <string name="app_name">FindParking</string>
    <string name="sing_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="acc_exists">Έχετε ήδη λογαριασμό;</string>
    <string name="sign_in">Sign In</string>
    <string name="user_login">User Login</string>
    <string name="acc_noexists">Δεν έχετε λογαριασμό;</string>
    <string name="arxikh">Αρχική</string>
    <string name="syndesi">Σύνδεση</string>
    <string name="aposundesi">Αποσύνδεση</string>
    <string name="no_parking">Δε βρέθηκαν parking στην περιοχή</string>
    <string name="find_areas">Βρες parking σε άλλες περιοχές</string>
    <string name="update_profle">Ενημέρωση Προφίλ</string>
    <string name="parking_nearme">Parking στην περιοχή μου</string>
    <string name="error_remote_call">There was an error on remote call</string>
</resources>
