<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/findparking"
    tools:context=".MainActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textLogin0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/sing_up" />
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearActivityMain"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:layout_marginBottom="5dp">
        <TextView
            android:id="@+id/textView051"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:ems="15"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/textView053"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/password" />
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="220dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textPassword">
        </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/login"
        android:layout_gravity="center" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <View
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="2dp"
        android:background="@color/MyGreen"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/textView053o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="5dp"
        android:text="@string/acc_exists" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_gravity="center" />

</LinearLayout>
